Changes to improve group images

--- a/course/groups-summary.html
+++ b/course/groups-summary.html
@@ -1,6 +1,6 @@
 <table align="center" class="generalbox">
  <tr>
-   <td valign="top"><?php echo $t->picture ?></td>
+   <td valign="top" width="100"><?php echo $t->picture ?></td>
    <td><p style="font-size: larger"><?php echo $t->name ?></p>
    <p><?php echo $t->description ?></p>
    <p><ul><?php 
