--- a/mod/quiz/format/gift/docs.html
+++ b/mod/quiz/format/gift/docs.html
@@ -1,13 +1,13 @@
 <html>
 
-	<head>
-		<meta http-equiv="content-type" content="text/html;charset=x-sjis">
-		<title>GIFT Import Filter Documentation</title>
-	</head>
+    <head>
+        <meta http-equiv="content-type" content="text/html;charset=x-sjis">
+        <title>GIFT Import Filter Documentation</title>
+    </head>
 
-	<body bgcolor="#ffffff">
-		<h2>DESCRIPTION</h2>
-		<p>GIFT is a versitile import filter that provides a quick and easy method for teachers to write Moodle quiz questions as a text file. It supports multiple-choice, true-false, short answer and numerical questions, as well as insertion of a blank line for the missing word format. Below are examples of the following question types: multiple choice, missing word, true-false, short-answer and numerical.</p>
+    <body bgcolor="#ffffff">
+        <h2>DESCRIPTION</h2>
+        <p>GIFT is a versitile import filter that provides a quick and easy method for teachers to write Moodle quiz questions as a text file. It supports multiple-choice, true-false, short answer and numerical questions, as well as insertion of a blank line for the missing word format. Below are examples of the following question types: multiple choice, missing word, true-false, short-answer and numerical.</p>
 <pre>     Who's buried in Grant's tomb?{~Grant ~Jefferson =no one}
      
      Grant is {~buried =entombed ~living} in Grant's tomb.
@@ -17,23 +17,24 @@
      Who's buried in Grant's tomb?{=no one =nobody}
 
      When was Ulysses S. Grant born?{#1922:1}</pre>
-		<p>Various question-types can be mixed in a sigle text file, and the format also supports question names, feedback comments and percentage-weight grades.</p>
-		<hr>
-		<p>
-		</p>
-		<h2>DOCUMENTATION</h2>
-		<p>
-		</p>
-		<p>GIFT is a versitile import filter that provides a quick and easy method for teachers to write Moodle quiz questions as a text file. GIFT can process four basic question types recognized by Moodle: Multiple Choice, True-False, Short Answer and Numerical. Various question-types can be mixed in a single text file, and the format also supports question names, feedback comments and percentage-weight grades.</p>
-		<p></p>
-		<h3>QUESTION TYPES</h3>
+        <p>Various question-types can be mixed in a sigle text file, and the format also supports question names, feedback comments and percentage-weight grades.</p>
+        <hr>
+        <p>
+        </p>
+        <h2>DOCUMENTATION</h2>
+        <p>
+        </p>
+        <p>GIFT is a versitile import filter that provides a quick and easy method for teachers to write Moodle quiz questions as a text file. GIFT can process four basic question types recognized by Moodle: Multiple Choice, True-False, Short Answer and Numerical. Various question-types can be mixed in a single text file, and the format also supports question names, feedback comments and percentage-weight grades.</p>
+        <p></p>
+        <h3>QUESTION TYPES</h3>
 
-		<p><u>Multiple Choice:</u><br />		For multiple choice questions, wrong answers are prefixed with a tilde (~) and the correct answer is prefixed with an equal sign (=).</p>
-		<pre>     Who's buried in Grant's tomb?{~Grant ~Jefferson =no one}</pre>
-		<p>The <b>Missing Word</b> format automatically inserts a fill-in-the-blank line (like this _____) in the middle of the sentence. To use the Misssing Word format, place the answers where you want the line to appear in the sentence.</p>
-		<pre>     Grant is {~buried =entombed ~living} in Grant's tomb.</pre>
-		<p>If the answers come before the closing punctuation mark, a fill-in-the-blank line will be inserted for the &quot;missing word&quot; format. All question types can be written in the Missing Word format.</p>
-		<p>There must be a blank line (double carriage return) seperating questions. For clarity, the answers can be written on seperate lines and even indented. For example:</p>
+        <p><u>Multiple Choice:</u><br />
+        For multiple choice questions, wrong answers are prefixed with a tilde (~) and the correct answer is prefixed with an equal sign (=).</p>
+        <pre>     Who's buried in Grant's tomb?{~Grant ~Jefferson =no one}</pre>
+        <p>The <b>Missing Word</b> format automatically inserts a fill-in-the-blank line (like this _____) in the middle of the sentence. To use the Misssing Word format, place the answers where you want the line to appear in the sentence.</p>
+        <pre>     Grant is {~buried =entombed ~living} in Grant's tomb.</pre>
+        <p>If the answers come before the closing punctuation mark, a fill-in-the-blank line will be inserted for the &quot;missing word&quot; format. All question types can be written in the Missing Word format.</p>
+        <p>There must be a blank line (double carriage return) seperating questions. For clarity, the answers can be written on seperate lines and even indented. For example:</p>
 <pre>     The American holiday of Thanksgiving is celebrated on the {
          ~second
          ~third
@@ -46,38 +47,38 @@
          ~Korea
          ~Egypt}</pre>
 
-		<p><u>Short Answer:</u><br /> Answers in Short Answer question-type are all prefixed by an equal sign (=), indicating that they are all correct answers .The answers must not contain a tilde.</p>
-		<pre>     Who's buried in Grant's tomb?{=no one =nobody}
+        <p><u>Short Answer:</u><br /> Answers in Short Answer question-type are all prefixed by an equal sign (=), indicating that they are all correct answers .The answers must not contain a tilde.</p>
+        <pre>     Who's buried in Grant's tomb?{=no one =nobody}
 
      Two plus two equals {=four =4}.</pre>
-		<p>If there is only <u>one</u> correct Short Answer, it may be written without the equal sign prefix, as long as it cannot be confused as True-False.
-		<p><u>True-False:</u><br />
-			In this question-type the answer indicates whether the statement is true or false. The answer should be written as {TRUE} or {FALSE}, or abbreviated to {T} or {F}.</p>
-		<pre>     Grant is buried in Grant's tomb.{F}
+        <p>If there is only <u>one</u> correct Short Answer, it may be written without the equal sign prefix, as long as it cannot be confused as True-False.
+        <p><u>True-False:</u><br />
+            In this question-type the answer indicates whether the statement is true or false. The answer should be written as {TRUE} or {FALSE}, or abbreviated to {T} or {F}.</p>
+        <pre>     Grant is buried in Grant's tomb.{F}
 
      The sun rises in the east.{T}</pre>
 
-		<p><u>Numerical:</u><br>
-			The answer section for Numerical questions must start with a number sign (#). Numerical answers can include an error margin, which is written following the correct answer, seperated by a colon. So for example, if the correct answer is anything between 1.5 and 2.5, then it would be written as follows <u>{#2:0.5}</u>. This indicates that 2 with an error margin of 0.5 is correct (i.e., the span from 1.5 to 2.5). If no error margin is specified, it will be assumed to be zero.</p>
-		<pre>     When was Ulysses S. Grant born? {#1922}
+        <p><u>Numerical:</u><br>
+            The answer section for Numerical questions must start with a number sign (#). Numerical answers can include an error margin, which is written following the correct answer, seperated by a colon. So for example, if the correct answer is anything between 1.5 and 2.5, then it would be written as follows <u>{#2:0.5}</u>. This indicates that 2 with an error margin of 0.5 is correct (i.e., the span from 1.5 to 2.5). If no error margin is specified, it will be assumed to be zero.</p>
+        <pre>     When was Ulysses S. Grant born? {#1922}
 
      What is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.</pre>
-     	<p>Optionally, numerical answers can be written as a span in the following format {<i>MinimumValue</i>..<i>MaximumValue</i>}.</p>
-		<pre>     What is the value of pi (to 3 decimal places)? {#3.141..3.142}.</pre>
-		<p>Moodle's browser interface does not support multiple numerical answers, but Moodle's code can and so does GIFT. This can be used to specify numerical multiple spans, and can be particularly usefully when combined with percentage weight grades. If multiple answers are used, they must be seperated by an equal sign, like short answer questions.</p>
-		<pre>     When was Ulysses S. Grant born? {#
+         <p>Optionally, numerical answers can be written as a span in the following format {#<i>MinimumValue</i>..<i>MaximumValue</i>}.</p>
+        <pre>     What is the value of pi (to 3 decimal places)? {#3.141..3.142}.</pre>
+        <p>Moodle's browser interface does not support multiple numerical answers, but Moodle's code can and so does GIFT. This can be used to specify numerical multiple spans, and can be particularly usefully when combined with percentage weight grades. If multiple answers are used, they must be seperated by an equal sign, like short answer questions.</p>
+        <pre>     When was Ulysses S. Grant born? {#
          =1922:0
          =%50%1922:2}</pre>
-		<p>Note that since Moodle's browser GUI doesn't support multiple answers for Numerical questions, there's no way to see them or edit them through Moodle. The only way to change a numerical answer beyond the first, is to delete the question and re-import it (or use something like phpMyAdmin).</p>
-		<h3>OPTIONS</h3>
-		<p>In addition to these basic question types, this filter offers the following options: question name, feedback and percentage answer weight.</p>
-		<p><u>Question Name:</u><br /> A question name can be specified by placing it first and enclosing it within double colons.</p>
+        <p>Note that since Moodle's browser GUI doesn't support multiple answers for Numerical questions, there's no way to see them or edit them through Moodle. The only way to change a numerical answer beyond the first, is to delete the question and re-import it (or use something like phpMyAdmin).</p>
+        <h3>OPTIONS</h3>
+        <p>In addition to these basic question types, this filter offers the following options: question name, feedback and percentage answer weight.</p>
+        <p><u>Question Name:</u><br /> A question name can be specified by placing it first and enclosing it within double colons.</p>
 <pre>     ::Kanji Origins::Japanese characters originally
      came from what country? {=China}
 
      ::Thanksgiving Date::The American holiday of Thanksgiving is 
      celebrated on the {~second ~third =fourth} Thursday of November.</pre>
-		<p>If no question name is specified, the entire question will be used as the name by default.</p>
+        <p>If no question name is specified, the entire question will be used as the name by default.</p>
 <p><u>Feedback Comments:</u><br /> Feedback can be included for each answer by following the answer with a number sign (# also known as a hash mark) and the feedback.</p>
 <pre>     What's the answer to this multiple-choice question?{
      ~wrong answer#comment on the wrong answer
@@ -110,15 +111,15 @@ within percent signs (e.g., %50%). This option can be combined with feedback com
 <p>Note that the last two examples are essentially the same question, first as multiple choice and then as short answer.</p>
 
 <p><small>Note that it is possible to specify percentage answer weights that are NOT available through the browser interface. Such answer-weights will calculate correctly (according to the value assigned when imported), and will appear normal to students taking the test. But such answer-weights will not display correctly to teachers when editing them through Moodle's Edit Question interface. The pull-down menu only allows certain fixed values, and if the answer-weight does not exactly match one of those predetermined values, then it will not display correctly. If you edit such a question through the browser interface, the answer weight will change to that displayed.</small></p>
-		<p><u>Other Options:</u><br />
-		Other options are avalable through editing the import filter <b>gift/format.php</b>. </p>
-		<p>Short Answer questions can be made case sensitive by changing &quot;0&quot; to &quot;1&quot; in the following line:<br />
-			 <tt>$question-&gt;usecase = 0;  // Ignore case</tt></p>
-		<p>It is also possible to enable multiple answers, by uncommenting the appropriate code. Search for &quot;enable multiple answers&quot; to find the lines.</p>
-		<p> </p>
-		<h3>CREDITS</h3>
-		<p>This filter was written through the collaboration of numerous members of the Moodle community. It was originally based on the missingword format, which included code from Thomas Robb and others. Paul Tsuchido Shew wrote this filter in December 2003 incorporating community suggestions for a more robust question format. The name was conceived as an acronym for  &quot;General Import Format Technology&quot; or something like that, but it's too long for a simple filter like this, so it just GIFT.</p>
-		<p><small>GIFT documentation, version 1.2. Paul Tsuchido Shew, 6 Jan 2004.</small></p>
+        <p><u>Other Options:</u><br />
+        Other options are avalable through editing the import filter <b>gift/format.php</b>. </p>
+        <p>Short Answer questions can be made case sensitive by changing &quot;0&quot; to &quot;1&quot; in the following line:<br />
+             <tt>$question-&gt;usecase = 0;  // Ignore case</tt></p>
+        <p>It is also possible to enable multiple answers, by uncommenting the appropriate code. Search for &quot;enable multiple answers&quot; to find the lines.</p>
+        <p> </p>
+        <h3>CREDITS</h3>
+        <p>This filter was written through the collaboration of numerous members of the Moodle community. It was originally based on the missingword format, which included code from Thomas Robb and others. Paul Tsuchido Shew wrote this filter in December 2003 incorporating community suggestions for a more robust question format. The name was conceived as an acronym for  &quot;General Import Format Technology&quot; or something like that, but it's too long for a simple filter like this, so it just GIFT.</p>
+        <p><small>GIFT documentation, version 1.2. Paul Tsuchido Shew, 6 Jan 2004.</small></p>
 </body>
 
 </html>
