Add new help file to index

--- a/lang/en/help/index.html
+++ b/lang/en/help/index.html
@@ -9,6 +9,7 @@
 <p>Administration</p>
 <ul>
   <li><a href="help.php?file=langedit.html">Language editing</a> 
+  <li><a href="help.php?file=uploadusers.html">Upload users</a> 
 </ul>
 
 <p>Setting up courses</p>
