Info about commas added

--- a/lang/en/help/uploadusers.html
+++ b/lang/en/help/uploadusers.html
@@ -18,7 +18,8 @@
       <p> <font color="#990000" face="Courier New, Courier, mono">idnumber, icq, phone1, phone2, address, url, description, mailformat, maildisplay, htmleditor, autosubscribe, course1, course2, course3, course4, course5</font></p>
     </blockquote>
     </li>
-  <li>You should also avoid commas within the data. For Boolean fields, use 0 for false and 1 for true. </li>
+  <li>Commas within the data should be encoded as &#44 - the script will automatically decode these back to commas. </li>
+  <li>For Boolean fields, use 0 for false and 1 for true. </li>
 </ul>
   
   
