followed change in Englisch version

--- a/lang/nl/help/uploadusers.html
+++ b/lang/nl/help/uploadusers.html
@@ -19,7 +19,8 @@
       <p> <font color="#990000" face="Courier New, Courier, mono">idnumber, icq, phone1, phone2, address, url, description, mailformat, maildisplay, htmleditor, autosubscribe, course1, course2, course3, course4, course5</font></p>
     </blockquote>
     </li>
-  <li>Je mag geen komma's gebruiken in de data. Voor Boolse velden gebruik je 0 voor onwaar en 1 voor waar. </li>
+  <li>Komma's in de gegevens mag je als , noteren. Het script zal automatisch de komma juist terugplaatsen. 
+  <li>Voor Boolse velden gebruik je 0 voor onwaar en 1 voor waar. </li>
 </ul>
   
   
