--- a/lang/de/help/mods.html
+++ b/lang/de/help/mods.html
@@ -1,50 +1,141 @@
-<P ALIGN=CENTER><B>Aktivitätsmodule</B></P>
-
-<P> Moodle enthält eine großen Bereich von Aktivitätsmodulen, die benutzt werden können, um jegliche Art von Kursen aufzubauen.</P>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Forums</B></P>
+<P ALIGN=CENTER><B>Aktivit&auml;tsmodule</B></P>
+<P> Moodle enth&auml;lt eine gro&szlig;en Anzahl von Aktivit&auml;tsmodulen die benutzt werden
+  k&ouml;nnen um jegliche Art von Kursen aufzubauen.</P>
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/attendance/icon.gif">&nbsp;<B>Anwesenheit</B></P>
 <UL>
-<P> Diese Aktivität kann die Wichtigste sein - hier ist es, wo die meisten Diskussionen stattfinden. 
-Foren können auf verschiedene Weise strukturiert sein, und können eine Gleichbewertung jedes Postings beinhalten. 
-Die Postings können eine Vielzahl von Formaten haben Anhänge mit einschließen. 
-
-Schreiben Sie sich in ein Forum ein, empfangen Teilnehmer Kopien jeder neuen Eintragung per eMail. 
-
-Ein Lehrer kann jedem Subskription auferlegen, wenn sie es wünschen. 
-
-
-A teacher can impose subscription on everyone if they want to.
+  <P> Dieses Modul erm&ouml;glicht es Ihnen die Teilnahme jedes einzelnen Teilnehmers/Teilnehmerin
+    f&uuml;r jede einzelnen Aufgabenstellung nachzuverfolgen.
 </UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<B>Journals</B></P>
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/assignment/icon.gif">&nbsp;<B>Aufgabe</B></P>
 <UL>
-<P>Dieses Modul ist eine sehr wichtige reflektierende Tätigkeit. Der Lehrer bittet den Kursteilnehmer, sich zu einem bestimmten Thema zu äußern. Der Kursteilnehmer kann die Antwort über die Zeit redigieren und verfeinern. Diese Antwort ist privat und kann nur vom Lehrer eingesehen werden Er kann ein Feedback auf jedem Journaleintrag anbieten. Eine gute Idee ist es, ungefähr eine Journaltätigkeit pro Woche zu haben.</P>
+  <P>Dieses Modul gibt die M&ouml;glichkeits Aufgabe an alle Teilnehmer zu richten.
+    Die Kursteilnehmer haben die M&ouml;glichkeit die bearbeiteten Aufgaben in
+    digitaler Form einzureichen (z. B. Upload einer Textdatei). Es ist auch m&ouml;glich
+    eine Offline-Aktivit&auml;t zu veranlassen bei der keine Dokumente auf den
+    Servern geladen werden m&uuml;ssen. Mit dem Aufgabenmodul wird z. B. die Bearbeitung
+    von Versuchen, Projekten, Reports und die Erstellung von Berichten veranlasst.
+    F&uuml;r jede Aufgabe k&ouml;nnen Bewertungenkriterien festgelegt werden (R&auml;nge).
+  </P>
 </UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Ressourcen</B></P>
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/chat/icon.gif">&nbsp;<B>Chat</B></P>
 <UL>
-<P>Ressourcen sind Inhalt: Informationen, die der Lehrer in den Kurs holen möchte. Diese können vorbereitete Dateien sein, die auf den Kursserver hochgeladen werden; Seiten redigiert direkt in Moodle; oder externe Webseiten die dazu gemacht wurden, um in diesem Teil des Kurses zu erscheinen.</P>
+  <P>Das Chatsmodul erlaubt Teilnehmern in Echtzeit online miteinander zu diskutieren.
+    Dies ist sinnvoll um einen direkten Austausch zu einem bestimmten Thema zu
+    erm&ouml;glichen. Durch diesen direkten Austausch kann sich das Verst&auml;ndnis
+    der Teilnehmer untereinander verbessern und der Austausch zu einem bestimmten
+    Thema verbessert und intensiviert werden. Alle Chatssitzungen werden in der
+    Datenbank gespeichert k&ouml;nnen verwaltet und sp&auml;ter erneut eingesehen
+    werden.</P>
 </UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;<B>Anweisungen</B></P>
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/dialogue/icon.gif">&nbsp;<B>Dialog</B></P>
 <UL>
-<P>Anweisungen erlauben dem Lehrer, eine Aufgabe zu spezifizieren. Das erfordert von den Kursteilnehmern, digitale Inhalte (irgendein Format) vorzubereiten und ihn auf den Kursserver hochzuladen. Typische Anweisungen umfassen Versuche, Projekte, Reports und so weiter. Dieses Modul beinhaltet einen Ordnungsservice.</P>
+  <P>Dieses Modul bietet eine einfache Kommunikationsm&ouml;glichkeit f&uuml;r
+    mehrere Benutzerpaare. Ein Lehrer kann einen Dialog mit einem Sch&uuml;ler
+    beginnen und ein Sch&uuml;ler kann einen Dialog mit einem Lehrer beginnen.
+    Optional kann ein Sch&uuml;ler auch einen Dialog mit einem anderen Sch&uuml;ler
+    beginnen. Ein Lehrer oder Sch&uuml;ler kann zu jeder Zeit an mehreren laufenden
+    Dialogen beteiligt sein.</P>
 </UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>Quizze</B></P>
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/label/icon.gif">&nbsp;<B>Einleitung</B></P>
 <UL>
-<P>Dieses Modul erlaubt dem Lehrer, Quiztests zu entwerfen und einzustellen. Diese Quizze bestehen aus Mehrfachantworten, zutreffend - falsch und kurzen Antwortfragen. Diese Fragen werden in einer kategorisierten Datenbank gehalten, und können innerhalb der Kurse wiederverwendet. Quizze können mehrfache Versuche erlauben. Jeder Versuch wird automatisch gekennzeichnet, und der Lehrer kann wählen, ob es ein Rückgespräch gibt oder die korrekte Antworten angezeigt wird. Dieses Modul beinhaltet  einen Ordnungsservice.</P>
+  <P>Einleitung ist kein wirkliches Modul - es ist ein Modul, welches als Platzhalter
+    verwendet wird. Dadurch ist es m&ouml;glich einen Text oder eine Grafik auf
+    der Ebene der anderen Module in den Kurs einzuf&uuml;gen. </P>
 </UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Wahlen</B></P>
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/forum/icon.gif">&nbsp;<B>Forum</B></P>
 <UL>
-<P>Eine Wahl-Aktivität ist sehr einfach - der Lehrer stellt eine Frage und gibt eine Auswahl an mehrfachen Antworten. Das kann als schnelle Umfrage nützlich sein, um der Klasse zu erlauben, über die Richtung des Kurses abzustimmen.
+  <P>Dieses Aktivit&auml;tsmodul ist sicherlich eins der wichtigsten Module in
+    moodle. Mit Hilfe der Foren finden die meisten Diskussionen statt. Foren k&ouml;nnen
+    auf verschiedene Art und Weise strukturiert sein und k&ouml;nnen Bewertungen
+    jedes einzelnen Beitrags beinhalten. Die Beitr&auml;ge k&ouml;nnen sehr unterschiedliche
+    Formate beinhalten und auch Datei-Anh&auml;nge einschlie&szlig;en (z.B. PDF-
+    Office- ZIP- oder Bilddateien). Durch das Ver&ouml;ffentlichen eines Beitrages
+    in einem Forum ist man f&uuml;r dieses Forum automatisch als Abonnent eingetragen.
+    Dies bedeutet das man ab sofort Kopien aller neuen Eintr&auml;ge des Forums
+    per E-Mail erh&auml;lt. Der Lehrer hat die M&ouml;glichkeit Teilnehmer auch
+    manuell f&uuml;r bestimmte Foren zu abonnieren wenn diese es w&uuml;nschen
+    oder f&uuml;r den Kurs als notwendig erscheint.
 </UL>
-
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Übersichten</B></P>
-<UL>
-<P>Das Modul "Übersicht" liefert eine Anzahl von überprüften Übersichts- Instrumenten die als nützlich befunden wurden, das Lernen in einer "Online"-Umgebung anzuregen. Lehrer können diese verwenden, um Daten von ihren Kursteilnehmern zu erfassen. Das hilft ihnen, mehr über ihre Klasse zu erfahren und die eigenen Lehrmethoden zu reflektieren.</P>
-</UL>
-
-
-
+<P><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/glossary/icon.gif">&nbsp;<B>Glossar
+  (W&ouml;rterbuch) </B></P>
+<blockquote>
+  <p>Diese Aktivit&auml;t erm&ouml;glicht den Teilnehmern eine Liste von Definitionen,
+    vergleichbar mit einem W&ouml;rterbuch, zu erstellen und zu pflegen. Die Eintr&auml;ge
+    k&ouml;nnen in vielen verschiedenen Formaten durchsucht und angeschaut werden.
+    Das Glossar erm&ouml;glicht es ebenso, dass Lehrer Eintr&auml;ge aus einem
+    Glossar in ein anderes (das Hauptglossar) innerhalb des selben Kurs exportieren.
+    Zu guter letzt ist es m&ouml;glich automatische Verkn&uuml;pfungen zu diesen
+    Eintr&auml;gen innerhalb des gesamten Kurses zu erstellen. </p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/journal/icon.gif">&nbsp;<B>Journal</B></p>
+<blockquote>
+  <p>Das Journal dient in erster Linie als Modul zur Reflexion zwischen Teilnehmer
+    und Lehrer. Der Lehrer bittet den Kursteilnehmer sich zu einem bestimmten
+    Thema oder Aufgabenstellung zu &auml;u&szlig;ern. Nur der Lehrer kann diese
+    Antworten einsehen. Der Kursteilnehmer hat die M&ouml;glichkeit seiner Antwort
+    sp&auml;ter zu ver&auml;ndern und zu verfeinern. Der Lehrer hat die M&ouml;glichkeit
+    auf jeden Journaleintrag eine Antwort zu geben und somit im Verlauf der ver&auml;nderten
+    und verfeinerten Eintr&auml;ge des Teilnehmers eine reflektierende Entwicklung
+    zu begleiten. Es wird empfohlen das Journal ca. einmal pro Woche zu nutzen.</p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/resource/icon.gif">&nbsp;<B>Literatur</B></p>
+<blockquote>
+  <p>Mit Hilfe des Moduls &quot;Literatur&quot; werden die Inhalte wie Arbeitsmaterialien
+    und Dokumente f&uuml;r den Kurs bereitgestellt. Es gibt verschiedene Formate
+    in denen die Literatur bereitgestellt werden kann. Zum einen vorbereitete
+    Dokumente wie z. B. PDF, Office und &auml;hnliche Dokumente die zuvor auf
+    den Server geladen werden m&uuml;ssen. Es besteht auch die M&ouml;glichkeit
+    Materialien im HTML Format bereitzustellen und externer Web-Seiten in den
+    Kurs zu verkn&uuml;pfen. Eine Liste der m&ouml;glichen Formate finden Sie<a href="<?=$CFG->wwwroot?>/help.php?module=resource&file=resourcetype.html" target="_self">
+    hier</a>.</p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/quiz/icon.gif">&nbsp;<B>Quiz</B></p>
+<blockquote>
+  <p>Quizze erlauben dem Lehrer Tests zu entwerfen und bereitzustellen. Quizze
+    k&ouml;nnen <a href="<?=$CFG->wwwroot?>/help.php?module=quiz&file=questiontypes.html" target="_self">verschiedene
+    Frageformen</a> beinhalten. Die einzelnen Fragen lassen sich in unterschiedlichen
+    Kategorien ablegen. Aus den erstellten Fragen kann dann ein einzelnes Quiz
+    zusammengestellt werden. So lassen sich alle Fragen mehrfach und in unterschiedlicher
+    Zusammensetzung wiederverwenden. Quizze k&ouml;nnen mehrfach Versuche erlauben.
+    Jeder Versuch wird automatisch gekennzeichnet und der Lehrer kann w&auml;hlen,
+    ob es eine R&uuml;cksprache gibt oder die korrekten Antworten direkt angezeigt
+    werden. F&uuml;r das Quizmodul k&ouml;nnen Bewertungskriterien festgelegt
+    werden (R&auml;nge).</p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/exercise/icon.gif">&nbsp;<B>&Uuml;bung</B></p>
+<blockquote>
+  <p>Eine &Uuml;bung ist ein einfaches aber wirkungsvolles Modul zur Aufgabenstellung.
+    In einer &Uuml;bung wird der/die Teilnehmner/in aufgefordert selber eine Arbeit
+    anzufertigen. Dies kann ein Text, eine Pr&auml;sentation oder eine Tabellenberechnung
+    sein. Die/der Teilnehmer/in ist aufgefordert nach er Fertiogstellung, die
+    eigene Arbeit selber zu bewerten. Wenn er die eigene Arbeit und die Selbstbewertung
+    an den Lehrer weitergegeben hat, kann dieser beide Teile (Arbeit und Selbstbewertung)
+    bewerten. Der Lehrer kann dem/der Teilnehmer/in ein Feedback geben und aufforder
+    die Arbeit zu &uuml;berarbeiten und ggfs. wieder abzugeben.</p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/survey/icon.gif">&nbsp;<B>Umfrage</B></p>
+<blockquote>
+  <p>Das Umfrage-Modul bietet eine Reihe gepr&uuml;fter Umfrageinstrumente (Standarisiert),
+    die als sinnvoll erachtet werden, das Lernen in Online-Umgebungen anzuregen
+    und zu &uuml;berpr&uuml;fen. Lehrer k&ouml;nnen Daten von Ihren Sch&uuml;lern
+    erheben, die Ihnen helfen, die Klasse besser kennenzulernen und ein Feedback
+    auf ihren eigenen Lehrstil zu erhalten. Momentan bietet Moodle nur <a href="<?=$CFG->wwwroot?>/help.php?module=moodle&file=surveys.html" target="_self">spezielle
+    Arten von Bewertungen</a> an.</p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/choice/icon.gif">&nbsp;<B>Wahl</B></p>
+<blockquote>
+  <p>Bei der Wahl stellt der Lehrer eine Frage und gibt eine Auswahl an meheren
+    Antworten. Dies kann f&uuml;r ein schnelle Umfrage sehr n&uuml;tzlich sein
+    um z. B. von den Teilnehmer zu erfahren wie sie sich den weiteren Verlauf
+    des Kurses w&uuml;nschen bzw. vorstellen. Die Wahl ist ein sehr einfaches
+    Modul.</p>
+</blockquote>
+<p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/workshop/icon.gif">&nbsp;<B>Workshop</B></p>
+<blockquote>
+  <p>Ein Workshop ist eine Teilnehmerbewertung mit einer Vielzahl von Optionen
+    die variiert werden k&ouml;nnen. Es erlaubt den Teilnehmern sich gegenseitig
+    mit den Arbeiten zu bewerten. Genauso k&ouml;nnen &Uuml;bungsprojekte in vielf&auml;ltiger
+    Weise bewertet werden. Das Modul organisiert die Sammlung und Verteilung der
+    zu bewertenden Arbeiten. Das Workshop-Modul wurde von Ray Kingdon entwickelt.
+  </p>
+</blockquote>
