Improved documentation for Quiz filters

--- a/lang/en/help/quiz/index.html
+++ b/lang/en/help/quiz/index.html
@@ -10,8 +10,10 @@
   <li><a href="help.php?module=quiz&file=multianswer.html">Embedded Answers (Cloze)</a>
   <li><a href="help.php?module=quiz&file=grademethod.html">Grading method</a>
   <li><a href="help.php?module=quiz&file=import.html">Importing questions</a>
+  <li><a href="help.php?module=quiz&file=formataiken.html">Importing Aiken format files</a>
   <li><a href="help.php?module=quiz&file=formatblackboard.html">Importing Blackboard quiz files</a>
   <li><a href="help.php?module=quiz&file=formatcustom.html">Importing custom quiz files</a>
+  <li><a href="help.php?module=quiz&file=formatgift.html">Importing GIFT format files</a>
   <li><a href="help.php?module=quiz&file=formatmissingword.html">Importing "Missing Word" files</a>
   <li><a href="help.php?module=quiz&file=match.html">Matching questions</a>
   <li><a href="help.php?module=quiz&file=maxgrade.html">Maximum grade</a>
