--- a/lang/en/help/quiz/import.html
+++ b/lang/en/help/quiz/import.html
@@ -5,6 +5,45 @@
 
 <P>A number of file formats are supported:
 
+<P><B>GIFT format</B></P>
+<ul>
+<p>GIFT is the most comprehensive import format available for importing 
+   Moodle quiz questions from a text file.  It supports Multiple-Choice, 
+   True-False, Short Answer and Numerical questions, as well as insertion 
+   of a _____ for the Missing word format.  Various question-types can be 
+   mixed in a single text file, and the format also supports question names, 
+   feedback comments and percentage-weight grades.  Below are some examples:</p>
+<pre>
+Who's buried in Grant's tomb?{~Grant ~Jefferson =no one}
+
+Grant is {~buried =entombed ~living} in Grant's tomb.
+
+Grant is buried in Grant's tomb.{FALSE}
+
+Who's buried in Grant's tomb?{=no one =nobody}
+
+When was Ulysses S. Grant born?{#1922:1}
+</pre>
+
+<p align=right><a href="help.php?file=formatgift.html&module=quiz">More info about the "GIFT" format</a></p>
+</ul>
+
+<P><B>Aiken format</B></P>
+<ul>
+<p>The Aiken format is a very simple way of creating multiple choice questions using a very clear human-readable format. Here is an example of the format:</p>
+<pre>
+What is the purpose of first aid?
+A. To save life, prevent further injury, preserve good health
+B. To provide medical treatment to any injured or wounded person
+C. To prevent further injury
+D. To aid victims who may be seeking help
+ANSWER: A
+</pre>
+
+<p align=right><a href="help.php?file=formataiken.html&module=quiz">More info about the "Aiken" format</a></p>
+</ul>
+
+
 <P><B>Missing Word</B></P>
 <UL>
 <P>This format only supports multiple choice questions.
