--- a/mod/quiz/multichoice.html
+++ b/mod/quiz/multichoice.html
@@ -59,21 +59,23 @@
     </TD>
 </TR>
 
-
+<?PHP 
+    for ($i=1; $i<=QUIZ_MAX_NUMBER_ANSWERS; $i++) {
+?>
 <TR valign=top>
-    <TD align=right><P><B><?php  print_string("choice", "quiz") ?> 1:</B></P></TD>
+    <TD align=right><P><B><?php  echo get_string("choice", "quiz")." $i";  ?>:</B></P></TD>
     <TD>
-        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[0]->answer) ?>">&nbsp;&nbsp;
+        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[$i-1]->answer) ?>">&nbsp;&nbsp;
         <?php  print_string("grade");
            echo ":&nbsp;";
-           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[0]->fraction, ""); ?>
+           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[$i-1]->fraction, ""); ?>
         <BR>
     </TD>
 </TR>
 <TR valign=top>
     <TD align=right><P><B><?php  print_string("feedback", "quiz") ?>:</B></P></TD>
     <TD>
-        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[0]->feedback) ?></textarea>
+        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[$i-1]->feedback) ?></textarea>
     </TD>
 </TR>
 
@@ -81,106 +83,9 @@
     <TD colspan=2>&nbsp;</TD>
 </TR>
 
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("choice", "quiz") ?> 2:</B></P></TD>
-    <TD>
-        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[1]->answer) ?>">&nbsp;&nbsp;
-        <?php  print_string("grade");
-           echo ":&nbsp;";
-           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[1]->fraction, ""); ?>
-        <BR>
-    </TD>
-</TR>
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("feedback", "quiz") ?>:</B></P></TD>
-    <TD>
-        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[1]->feedback) ?></textarea>
-    </TD>
-</TR>
-
-<TR valign=top>
-    <TD colspan=2>&nbsp;</TD>
-</TR>
-
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("choice", "quiz") ?> 3:</B></P></TD>
-    <TD>
-        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[2]->answer) ?>">&nbsp;&nbsp;
-        <?php  print_string("grade");
-           echo ":&nbsp;";
-           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[2]->fraction, ""); ?>
-        <BR>
-    </TD>
-</TR>
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("feedback", "quiz") ?>:</B></P></TD>
-    <TD>
-        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[2]->feedback) ?></textarea>
-    </TD>
-</TR>
-
-<TR valign=top>
-    <TD colspan=2>&nbsp;</TD>
-</TR>
-
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("choice", "quiz") ?> 4:</B></P></TD>
-    <TD>
-        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[3]->answer) ?>">&nbsp;&nbsp;
-        <?php  print_string("grade");
-           echo ":&nbsp;";
-           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[3]->fraction, ""); ?>
-        <BR>
-    </TD>
-</TR>
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("feedback", "quiz") ?>:</B></P></TD>
-    <TD>
-        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[3]->feedback) ?></textarea>
-    </TD>
-</TR>
-
-<TR valign=top>
-    <TD colspan=2>&nbsp;</TD>
-</TR>
-
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("choice", "quiz") ?> 5:</B></P></TD>
-    <TD>
-        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[4]->answer) ?>">&nbsp;&nbsp;
-        <?php  print_string("grade");
-           echo ":&nbsp;";
-           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[4]->fraction, ""); ?>
-        <BR>
-    </TD>
-</TR>
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("feedback", "quiz") ?>:</B></P></TD>
-    <TD>
-        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[4]->feedback) ?></textarea>
-    </TD>
-</TR>
-
-<TR valign=top>
-    <TD colspan=2>&nbsp;</TD>
-</TR>
-
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("choice", "quiz") ?> 6:</B></P></TD>
-    <TD>
-        <INPUT type="text" name="answer[]" size=50 maxlength=255 value="<?php  p($answers[5]->answer) ?>">&nbsp;&nbsp;
-        <?php  print_string("grade");
-           echo ":&nbsp;";
-           choose_from_menu($gradeoptionsfull, "fraction[]", $answers[5]->fraction, ""); ?>
-        <BR>
-    </TD>
-</TR>
-<TR valign=top>
-    <TD align=right><P><B><?php  print_string("feedback", "quiz") ?>:</B></P></TD>
-    <TD>
-        <textarea name="feedback[]" rows=2 cols=50 wrap="virtual"><?php  p($answers[5]->feedback) ?></textarea>
-    </TD>
-</TR>
+<?php
+    } /// End of loop, printing answers
+?>
 </TABLE>
 
 <INPUT type="hidden" name=id value="<?php  p($question->id) ?>">
