Updated docs to latest revisions of GIFT import filter

--- a/lang/en/help/quiz/import.html
+++ b/lang/en/help/quiz/import.html
@@ -8,11 +8,12 @@
 <P><B>GIFT format</B></P>
 <ul>
 <p>GIFT is the most comprehensive import format available for importing 
-   Moodle quiz questions from a text file.  It supports Multiple-Choice, 
+   Moodle quiz questions from a text file.  It was designed to be an easy 
+   method for teachers writing questions as a text file. It supports Multiple-Choice, 
    True-False, Short Answer and Numerical questions, as well as insertion 
    of a _____ for the Missing word format.  Various question-types can be 
-   mixed in a single text file, and the format also supports question names, 
-   feedback comments and percentage-weight grades.  Below are some examples:</p>
+   mixed in a single text file, and the format also supports inline comments, question names, 
+   feedback and percentage-weight grades.  Below are some examples:</p>
 <pre>
 Who's buried in Grant's tomb?{~Grant ~Jefferson =no one}
 
@@ -22,7 +23,7 @@ Grant is buried in Grant's tomb.{FALSE}
 
 Who's buried in Grant's tomb?{=no one =nobody}
 
-When was Ulysses S. Grant born?{#1922:1}
+When was Ulysses S. Grant born?{#1822:1}
 </pre>
 
 <p align=right><a href="help.php?file=formatgift.html&module=quiz">More info about the "GIFT" format</a></p>
