--- a/lang/en/help/quiz/formatgift.html
+++ b/lang/en/help/quiz/formatgift.html
@@ -1,12 +1,11 @@
 <p align=center><b>Importing "GIFT" format files</b></p>
 
-
 <p>GIFT is the most comprehensive import format available for importing 
    Moodle quiz questions from a text file.  It supports Multiple-Choice, 
    True-False, Short Answer and Numerical questions, as well as insertion 
-   of a _____ for the Missing word format.  Various question-types can be 
-   mixed in a single text file, and the format also supports question names, 
-   feedback comments and percentage-weight grades.</p>
+   of a _____ for the Missing Word format.  Various question-types can be 
+   mixed in a single text file, and the format also supports inline comments, 
+   question names, feedback and percentage-weight grades.</p>
 
         <h3>QUESTION TYPES</h3>
 
@@ -42,29 +41,34 @@
 
         <p><u>Numerical:</u><br>
             The answer section for Numerical questions must start with a number sign (#). Numerical answers can include an error margin, which is written following the correct answer, seperated by a colon. So for example, if the correct answer is anything between 1.5 and 2.5, then it would be written as follows <u>{#2:0.5}</u>. This indicates that 2 with an error margin of 0.5 is correct (i.e., the span from 1.5 to 2.5). If no error margin is specified, it will be assumed to be zero.</p>
-        <pre>     When was Ulysses S. Grant born? {#1922}
+        <pre>     When was Ulysses S. Grant born? {#1822}
 
      What is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.</pre>
          <p>Optionally, numerical answers can be written as a span in the following format {#<i>MinimumValue</i>..<i>MaximumValue</i>}.</p>
         <pre>     What is the value of pi (to 3 decimal places)? {#3.141..3.142}.</pre>
         <p>Moodle's browser interface does not support multiple numerical answers, but Moodle's code can and so does GIFT. This can be used to specify numerical multiple spans, and can be particularly usefully when combined with percentage weight grades. If multiple answers are used, they must be seperated by an equal sign, like short answer questions.</p>
         <pre>     When was Ulysses S. Grant born? {#
-         =1922:0
-         =%50%1922:2}</pre>
+         =1822:0
+         =%50%1822:2}</pre>
         <p>Note that since Moodle's browser GUI doesn't support multiple answers for Numerical questions, there's no way to see them or edit them through Moodle. The only way to change a numerical answer beyond the first, is to delete the question and re-import it (or use something like phpMyAdmin).</p>
         <h3>OPTIONS</h3>
-        <p>In addition to these basic question types, this filter offers the following options: question name, feedback and percentage answer weight.</p>
-        <p><u>Question Name:</u><br /> A question name can be specified by placing it first and enclosing it within double colons.</p>
+        <p>In addition to these basic question types, this filter offers the following options: inline comments, question name, feedback and percentage answer weight.</p>
+        <p><u>Inline Comments:</u><br />
+        Comments that will not be imported into Moodle can be included in the text file. This can be used to provide headers or more information about the questions. All lines that start with a double backslash (not counting tabs or spaces) will be ignored by the filter.
+<pre>     // Subheading: Numerical questions below
+     What's 2 plus 2? {#4}</pre>
+        <p><u>Question Name:</u><br /> A question name can be specified by placing it first and enclosing it 
+within double colons.</p>
 <pre>     ::Kanji Origins::Japanese characters originally
      came from what country? {=China}
 
      ::Thanksgiving Date::The American holiday of Thanksgiving is 
      celebrated on the {~second ~third =fourth} Thursday of November.</pre>
         <p>If no question name is specified, the entire question will be used as the name by default.</p>
-<p><u>Feedback Comments:</u><br /> Feedback can be included for each answer by following the answer with a number sign (# also known as a hash mark) and the feedback.</p>
+<p><u>Feedback:</u><br /> Feedback can be included for each answer by following the answer with a number sign (# also known as a hash mark) and the feedback.</p>
 <pre>     What's the answer to this multiple-choice question?{
-     ~wrong answer#comment on the wrong answer
-     ~another wrong answer#comment on this wrong answer
+     ~wrong answer#feedback comment on the wrong answer
+     ~another wrong answer#feedback comment on this wrong answer
      =right answer#Very good!}
      
      Who's buried in Grant's tomb?{
@@ -73,7 +77,7 @@
      
      Grant is buried in Grant's tomb.{FALSE#No one is buried in Grant's tomb.}</pre>
 
-<p>For Multiple Choice questions, feedback is displayed only for the answer the student selected. For short answer, feedback is shown only when students input the corresponding correct answer. For true-false questions, the imported feedback is saved so that it will display if the student marked the question incorrectly. So, in the last example above, the student would see the comment only if they selected TRUE as their answer.</p>
+<p>For Multiple Choice questions, feedback is displayed only for the answer the student selected. For short answer, feedback is shown only when students input the corresponding correct answer. For true-false questions, the imported feedback is saved so that it will display if the student marked the question incorrectly. So, in the last example above, the student would see the feedback only if they selected TRUE as their answer.</p>
 
 <p><u>Percentage Answer Weights:</u><br />
 Percentage answer weights are available for both Multiple Choice and Short Answer questions. Percentage answer weights can be included by following the tilde (for Multiple Choice) or equal sign (for Short Answer) with the desired percent enclosed 
@@ -93,13 +97,31 @@ within percent signs (e.g., %50%). This option can be combined with feedback com
 <p>Note that the last two examples are essentially the same question, first as multiple choice and then as short answer.</p>
 
 <p><small>Note that it is possible to specify percentage answer weights that are NOT available through the browser interface. Such answer-weights will calculate correctly (according to the value assigned when imported), and will appear normal to students taking the test. But such answer-weights will not display correctly to teachers when editing them through Moodle's Edit Question interface. The pull-down menu only allows certain fixed values, and if the answer-weight does not exactly match one of those predetermined values, then it will not display correctly. If you edit such a question through the browser interface, the answer weight will change to that displayed.</small></p>
+
+<p><u>Multiple Answers:</u><br />
+The Multiple Answers option is used for multiple choice questions when two or more answers must be selected in order to obtain full credit. The multiple answers option is enabled by assigning partial answer weight to multiple answers, while allowing no single answer to receive full credit.</p>
+<pre>     What two people are entombed in Grant's tomb? {
+          ~No one
+          ~%50%Grant
+          ~%50%Grant's wife
+          ~Grant's father }</pre>
+<p>Note that there is no equal sign (=) in any answer, and the answers should total no more than 100% or Moodle will return an error. To avoid the problem of students automatically getting 100% by simply checking all of the answers, it is best to include negative answer weights for wrong answers.</p>
+<pre>     What two people are entombed in Grant's tomb? {
+          ~%-50%No one
+          ~%50%Grant
+          ~%50%Grant's wife
+          ~%-50%Grant's father }</pre>
+
         <p><u>Other Options:</u><br />
         Other options are avalable through editing the import filter <b>gift/format.php</b>. </p>
-        <p>Short Answer questions can be made case sensitive by changing &quot;0&quot; to &quot;1&quot; in the following line:<br />
-             <tt>$question-&gt;usecase = 0;  // Ignore case</tt></p>
-        <p>It is also possible to enable multiple answers, by uncommenting the appropriate code. Search for &quot;enable multiple answers&quot; to find the lines.</p>
-        <p> </p>
-        <h3>CREDITS</h3>
-        <p>This filter was written through the collaboration of numerous members of the Moodle community. It was originally based on the missingword format, which included code from Martin Dougiamas, Thomas Robb and others. Paul Tsuchido Shew wrote this filter in December 2003 incorporating community suggestions for a more robust question format. The name was conceived as an acronym for  &quot;General Import Format Technology&quot; or something like that, but it's too long for a simple filter like this, so it just GIFT.</p>
-        <p><small>GIFT documentation, version 1.2. Paul Tsuchido Shew, 6 Jan 2004.</small></p>
-
+<p>Short Answer questions can be made case sensitive by changing &quot;0&quot; to &quot;1&quot; in the following line:<br />
+        <tt>$question-&gt;usecase = 0;  // Ignore case</tt></p>
+<p></p>
+<h3>TROUBLESHOOTING AND HELP</h3>
+<p>The text encoding of your text file must be the same as your Moodle installation. </p>
+<p>An example questions text file can be found here: <b>gift/examples.txt</b>.</p>
+<p>For questions about this filter, or if errors are discovered, please post in the Quiz module forum at Moodle.org.</p>
+<p></p>
+<h3>CREDITS</h3>
+<p>This filter was written through the collaboration of numerous members of the Moodle community. It was originally based on the missingword format, which included code from Martin Dougiamas, Thomas Robb and others. Paul Tsuchido Shew wrote this filter in December 2003 incorporating community suggestions for a more robust question format. The name was conceived as an acronym for  &quot;General Import Format Technology&quot; or something like that, but it's too long for a simple filter like this, so it just GIFT.</p>
+        <p><small>GIFT documentation by Paul Tsuchido Shew, 10 Jan 2004.</small></p>
