--- a/lang/en/help/quiz/import.html
+++ b/lang/en/help/quiz/import.html
@@ -12,7 +12,7 @@
    method for teachers writing questions as a text file. It supports Multiple-Choice, 
    True-False, Short Answer and Numerical questions, as well as insertion 
    of a _____ for the Missing word format.  Various question-types can be 
-   mixed in a single text file, and the format also supports inline comments, question names, 
+   mixed in a single text file, and the format also supports line comments, question names, 
    feedback and percentage-weight grades.  Below are some examples:</p>
 <pre>
 Who's buried in Grant's tomb?{~Grant ~Jefferson =no one}
