changed title to fit logicaly in indexfile

--- a/lang/nl/help/quiz/formatctm.html
+++ b/lang/nl/help/quiz/formatctm.html
@@ -1,4 +1,4 @@
-<p align=center><b> "Course Test Manager" bestanden importeren</b></p>
+<p align=center><b>Importeren van "Course Test Manager" bestanden</b></p>
 
 <p>Course Test Manager is een "End of Lifetime" software pakket van Course Technology. 
 Het wordt niet langer actief ontwikkeld door Course Technology. Het is vervangen door een nieuwe testbeheerder, ExamView
