--- a/lang/nl/help/quiz/import.html
+++ b/lang/nl/help/quiz/import.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>Importeer vragen uit een bestand</B></P>
+<P ALIGN=CENTER><B>Importeren van vragen uit een bestand</B></P>
 
 <P>
 Met dit formulier kun je vragen importeren uit tekstbestanden op je eigen computer door ze te uploaden via een 
