--- a/lang/nl/help/quiz/formatblackboard.html
+++ b/lang/nl/help/quiz/formatblackboard.html
@@ -1,3 +1,3 @@
-<p align=center><b>"Blackboard Quiz format" bestanden importeren</b></p>
+<p align=center><b>Importeren van "Blackboard Quiz format" bestanden</b></p>
 
 <p>Documentatie is helaas nog niet af.</p>
