--- a/lang/nl/help/quiz/formatgift.html
+++ b/lang/nl/help/quiz/formatgift.html
@@ -126,7 +126,7 @@ De meerdere antwoorden mogelijk-optie wordt gebruikt voor multiple choice vragen
 <p></p>
 <h3>PROBLEEMOPLOSSING EN HELP</h3>
 <p>De tekstcodering van je tekstbestand moet hetzelfde zijn als die van je Moodleinstallatie.</p>
-<p>Een voorbeeldbestand met vragen kun je vinden op <b>gift/examples.txt</b>.</p>
+<p>Een voorbeeldbestand met vragen kun je vinden op <a href="../../../../mod/quiz/format/gift/examples.txt">gift/examples.txt</a>.</p>
 <p>Voor vragen over deze filter, of als je fouten zou vinden, post deze dan in het Quiz module forum op Moodle.org.</p>
 <p></p>
 <h3>KREDIETEN</h3>
